# kida

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PR_BASELINE_DRIFT_RATIONALE.md  README.md  RELEASE_NOTES_0.2.5.md  SECURITY.md  action.yml  context7.json  pyproject.toml
.cursor/skills/: README.md
.dori/: context.json  file_history.json
.dori/events/: d17d7bd0.json
.github/: AGENTS.md
.github/kida-templates/: coverage-report.md  pytest-report.md  ruff-report.md  ty-report.md
.github/workflows/: amp-review.yml  benchmark-baseline.yml  downstream-canaries.yml  pages.yml  python-publish.yml  release-notes.yml  steward-network.yml  tests.yml  ty.yml
.stewards/: PROTOCOL.md  SCHEMA.md  manifest.toml  project.py  verify.py
action_support/: AGENTS.md  __init__.py  release_notes.py
benchmarks/: AGENTS.md  README.md  RESULTS.md  __init__.py  benchmark_cold_start.py  benchmark_cold_start_phases.py  benchmark_escape.py  benchmark_memory.py  benchmark_render.py  benchmark_scaling.py  benchmark_threading.py  conftest.py  profile_bytecode_disk_load.py  test_benchmark_cold_start.py  test_benchmark_compile_pipeline.py  test_benchmark_comprehensions.py  test_benchmark_concurrent.py  test_benchmark_dogfooding.py  test_benchmark_encapsulation_advice.py  test_benchmark_escape.py  test_benchmark_extraction_advice.py  test_benchmark_features.py  test_benchmark_full_comparison.py  test_benchmark_include_depth.py  test_benchmark_inherited_blocks.py  test_benchmark_introspection.py  test_benchmark_lexer.py  test_benchmark_mako.py  test_benchmark_memory.py  test_benchmark_optimization_levers.py  test_benchmark_output_sanity.py  test_benchmark_partial_eval.py  test_benchmark_partial_eval_phase2.py  test_benchmark_regression_core.py  test_benchmark_render.py  test_benchmark_saga.py  test_benchmark_scaling.py  test_benchmark_scaling_depth.py  test_benchmark_shape_profiles.py  test_benchmark_streaming.py  (+2 more)
benchmarks/Darwin-CPython-3.14-64bit/: 0001_baseline.json
benchmarks/Linux-CPython-3.14-64bit/: 0001_baseline.json
benchmarks/fixtures/: context_complex.py  context_large.py  context_medium.py  context_small.py
benchmarks/templates/: large.html  medium.html  small.html
changelog.d/: +provide-consume.added.md  +tilde-markup-concat.fixed.md  138.changed.md  139.changed.md  140.changed.md  141.changed.md  156.added.md  158.changed.md  158.fixed.md  253.fixed.md  254.added.md  255.added.md  268.added.md  279.added.md  280.added.md  283.added.md  285.added.md  286.added.md  287.added.md  288.added.md  290.fixed.md  292.added.md  304.security.md
changelog.d/breaking/: strict-undefined-default.md
changelog.d/changed/: component-validation.md
docs/: AGENTS.md  README.md  downstream-pilot-policy.md  github-action.md  kida-render-product.md  kida-vs-jinja2.md  marketplace-listing.md  milo-vision.md  report-template-contracts.json  stability-gate.md  strategic-roadmap.md  terminal-api-contract.md
examples/: AGENTS.md  README.md  colored_errors_demo.py  conftest.py  error_stack_demo.py
plan/: AGENTS.md  README.md  design-render-surface-hardening.md  epic-i18n-completion.md  epic-kida-milo-integration.md  epic-large-app-ergonomics.md  epic-partial-eval-enhancement.md  epic-partial-eval-phase-2.md  epic-pre-1.0-stabilization.md  epic-render-surface-hardening.md  epic-template-framework-gaps.md  epic-tstring-dogfooding.md  release-0.10.0-roadmap.md  research-declarative-shadow-dom.md  research-playground-feasibility.md  rfc-async-rendering.md  rfc-benchmarking-strategy.md  rfc-c-escaping-extension.md  rfc-canonical-component-catalog.md  rfc-contextvar-patterns.md  rfc-error-boundaries.md  rfc-flush-directive.md  rfc-fstring-code-generation.md  rfc-i18n.md  rfc-kida-extraction.md  rfc-kida-site.md  rfc-large-template-optimization.md  rfc-list-comprehensions.md  rfc-markup-security.md  rfc-milo-vision-diff.md  rfc-mixin-protocol-typing.md  rfc-performance-optimization.md  rfc-region-blocks-parameter.md  rfc-relative-template-resolution.md  rfc-report-contract-hardening.md  rfc-saga-benchmarks.md  rfc-scoped-slots.md  rfc-template-helpers-any-reduction.md  rfc-template-type-lattice.md  rfc-terminal-tutorial-outline.md  (+8 more)
reports/: type-baseline.md
schemas/: AGENTS.md
scripts/: benchmark_baseline.sh  benchmark_compare.sh  benchmark_suites.sh  check_python_version.py  extract_kida.py  fix_docstring_indentation.py  maintainability_scorecard.py  package_smoke.py  verify_downstream_override.py
site/: AGENTS.md
src/kida/: AGENTS.md  (+26 more)
templates/: AGENTS.md  code-review-report.md  copilot-instructions-report.md  coverage-report.md  dependency-review-report.md  deploy-preview-report.md  gotest-report.md  jest-report.md  pr-summary-report.md  release-notes-compact-report.md  release-notes-detailed-report.md  release-notes-report.md  release-notes-terminal-report.md  sarif-report.md  security-scan-report.md
tests/: AGENTS.md  __init__.py  conftest.py  strategies.py  test_adapter_advice_context_contract.py  test_analysis_error_codes.py  test_block_modifiers.py  test_block_recompile.py  test_bytecode_cache_concurrency.py  test_bytecode_cache_differential.py  test_bytecode_cache_warning_parity.py  test_callable_plans.py  test_check_diagnostic_formats.py  test_cli.py  test_cli_command_modules.py  test_cli_components.py  test_cold_start_phase_benchmark.py  test_compiler_analysis_phases.py  test_compiler_expr_dispatch.py  test_compiler_scaffolding.py  test_component_authoring_contract.py  test_component_catalog_contract_design.py  test_composition_helpers.py  test_def_metadata.py  test_definition_toplevel_check.py  test_diagnostic_adapters.py  test_diagnostics_contract.py  test_diagnostics_model.py  test_docs_install_snippets.py  test_downstream_canary.py  test_encapsulation_advisor_contract_design.py  test_encoding_edge_cases.py  test_error_boundaries.py  test_error_stack_traces.py  test_examples.py  test_explicit_closer_documentation.py  test_extension_diagnostics.py  test_filter_coverage.py  test_filters_debug.py  test_filters_misc.py  (+91 more)
(+650 files in other folders)
