[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kida"
version = "0.1.0"
description = "Modern template engine for Python 3.14t — AST-native, free-threading ready"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["template-engine", "jinja2", "free-threading", "async", "templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [] # Pure Python, zero runtime dependencies

[project.optional-dependencies]
docs = ["bengal"]

[project.urls]
Homepage = "https://github.com/lbliii/kida"
Documentation = "https://github.com/lbliii/kida"
Repository = "https://github.com/lbliii/kida"
Changelog = "https://github.com/lbliii/kida/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.pyright]
include = ["src"]
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Enable Python upgrade rules and other quality checks
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "UP",  # pyupgrade - Python modernization
    "B",   # flake8-bugbear - common bugs
    "SIM", # flake8-simplify - simplify code
    "I",   # isort - import sorting
    "N",   # pep8-naming
]
ignore = ["E501"]  # Line length handled by formatter

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101"] # Allow assert in tests

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.3.0",   # Prevent hung tests
    "hypothesis>=6.100.0",     # Property-based testing
    # Linting & Type Checking
    "pyright>=1.1",
    "ruff>=0.14.0",
    # Pre-commit (optional, for local dev)
    "pre-commit>=4.0.0",
]
docs = [
    "bengal",
]
