[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kida-templates"
version = "0.1.2"
description = "Modern template engine for Python 3.14t — AST-native, free-threading ready"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["template-engine", "jinja2", "free-threading", "async", "templates"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [] # Pure Python, zero runtime dependencies

[project.optional-dependencies]
docs = ["bengal>=0.1.9"]

[project.urls]
Homepage = "https://github.com/lbliii/kida"
Documentation = "https://github.com/lbliii/kida"
Repository = "https://github.com/lbliii/kida"
Changelog = "https://github.com/lbliii/kida/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["kida"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["dist/", "build/", "benchmarks/", "tests/", "examples/"]

# Markup class intentionally returns Self instead of str (like MarkupSafe)
# This technically violates LSP but is the correct pattern for HTML-safe strings
[[tool.ty.overrides]]
include = ["src/kida/utils/html.py"]
[tool.ty.overrides.rules]
invalid-method-override = "ignore"

# Compiler/parser mixin patterns: mixins access attributes defined in sibling
# mixins or the host class. ty cannot resolve cross-mixin attribute access.
# These will be fixed properly via Protocol typing (see plan/rfc-mixin-protocol-typing.md)
#
# Analysis visitor pattern: visitor methods dispatch on node type and access
# subclass-specific attributes via the base Node type.
[[tool.ty.overrides]]
include = ["src/kida/compiler/**", "src/kida/parser/**", "src/kida/analysis/**"]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Enable Python upgrade rules and other quality checks
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade - Python modernization
    "B",    # flake8-bugbear - common bugs
    "SIM",  # flake8-simplify - simplify code
    "I",    # isort - import sorting
    "N",    # pep8-naming
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint - performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
]
ignore = ["E501"] # Line length handled by formatter

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101"] # Allow assert in tests

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.3.0",   # Prevent hung tests
    "hypothesis>=6.100.0",     # Property-based testing
    "jinja2>=3.1.6,<3.2",
    # Linting & Type Checking
    "ty>=0.0.11",   # Astral type checker (Rust-based, 10-100x faster than mypy)
    "ruff>=0.14.0",
    # Pre-commit (optional, for local dev)
    "pre-commit>=4.0.0",
]
docs = ["bengal>=0.1.9"]
