[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kida-templates"
version = "0.4.1"
description = "Python template engine for HTML, terminal, and streaming — with framework integration"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
keywords = ["python-template-engine", "template-engine", "jinja2-alternative", "html-templates", "streaming", "async", "templates", "free-threading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: CGI Tools/Libraries",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [] # Pure Python, zero runtime dependencies

[project.optional-dependencies]
docs = ["bengal>=0.2.6"]
perf = ["markupsafe"]

[project.scripts]
kida = "kida.cli:main"

[project.entry-points."babel.extractors"]
kida = "kida.babel:extract"

[project.urls]
Homepage = "https://lbliii.github.io/kida/"
Documentation = "https://lbliii.github.io/kida/"
Repository = "https://github.com/lbliii/kida"
Changelog = "https://github.com/lbliii/kida/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["kida"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
precision = 1
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@overload",
]

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["dist/", "build/", "benchmarks/", "tests/", "examples/"]

# Safe-string classes (Markup, Styled, Marked) intentionally return Self
# instead of str. This technically violates LSP but is the correct pattern
# for safe-string wrappers (like MarkupSafe).
[[tool.ty.overrides]]
include = ["src/kida/utils/html.py", "src/kida/utils/terminal_escape.py", "src/kida/utils/markdown_escape.py"]
[tool.ty.overrides.rules]
invalid-method-override = "ignore"

# Compiler mixin patterns: mixins access attributes defined in sibling
# mixins or the host class. ty cannot resolve cross-mixin attribute access.
# See plan/rfc-mixin-protocol-typing.md for the long-term fix.
[[tool.ty.overrides]]
include = [
    "src/kida/compiler/core.py",
    "src/kida/compiler/expressions.py",
    "src/kida/compiler/coalescing.py",
    "src/kida/compiler/stream_transform.py",
    "src/kida/compiler/partial_eval.py",
    "src/kida/compiler/block_recompile.py",
    "src/kida/compiler/utils.py",
    "src/kida/compiler/statements/*.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

# Parser mixin patterns: same cross-mixin attribute access issue.
[[tool.ty.overrides]]
include = [
    "src/kida/parser/core.py",
    "src/kida/parser/expressions.py",
    "src/kida/parser/statements.py",
    "src/kida/parser/blocks/*.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

# Analysis visitor pattern: visitor methods dispatch on node type and access
# subclass-specific attributes via the base Node type.
[[tool.ty.overrides]]
include = [
    "src/kida/analysis/dependencies.py",
    "src/kida/analysis/purity.py",
    "src/kida/analysis/a11y.py",
    "src/kida/analysis/type_checker.py",
]
[tool.ty.overrides.rules]
unresolved-attribute = "warn"

# Optional framework integrations (not installed in minimal dev env).
[[tool.ty.overrides]]
include = ["src/kida/contrib/flask.py", "src/kida/contrib/starlette.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

# Optional wcwidth (wider than Unicode East Asian width in stdlib).
[[tool.ty.overrides]]
include = ["src/kida/environment/terminal.py", "src/kida/utils/ansi_width.py"]
[tool.ty.overrides.rules]
unresolved-import = "ignore"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
# Enable Python upgrade rules and other quality checks
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes (unused imports, variables, etc.)
    "UP",   # pyupgrade - Python modernization
    "B",    # flake8-bugbear - common bugs
    "SIM",  # flake8-simplify - simplify code
    "I",    # isort - import sorting
    "N",    # pep8-naming
    "PIE",  # misc lints (unnecessary pass, duplicate dict keys, etc.)
    "PERF", # perflint - performance anti-patterns
    "C4",   # unnecessary comprehensions/list()/dict() calls
    "RUF",  # Ruff-specific (unused noqa, mutable class defaults, etc.)
    "TCH",  # flake8-type-checking - imports behind TYPE_CHECKING
    "SLOT", # flake8-slots - enforce __slots__
    "FURB", # refurb - modern Python idioms
    "T20",  # flake8-print - no print() in library code
    "PTH",  # flake8-pathlib - pathlib over os.path
]
ignore = ["E501"] # Line length handled by formatter

# Per-file ignore rules
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # Allow unused imports in __init__ files
"tests/**/*.py" = ["S101", "T201", "TC003"]  # Allow assert, print, and runtime stdlib imports in tests
"src/kida/cli.py" = ["T201"]  # CLI legitimately uses print()
"src/kida/environment/filters/_debug.py" = ["T201"]  # Debug filter uses print()
"benchmarks/**/*.py" = ["T201"]  # Benchmarks legitimately use print()
"examples/**/*.py" = ["T201"]  # Examples legitimately use print()
"scripts/**/*.py" = ["T201", "PTH"]  # Scripts legitimately use print() and os.path

[dependency-groups]
dev = [
    # Testing
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-benchmark>=4.0.0",
    "pytest-xdist>=3.3.0",
    "pytest-timeout>=2.3.0",   # Prevent hung tests
    "hypothesis>=6.100.0",     # Property-based testing
    "jinja2>=3.1.6,<3.2",
    "milo-cli>=0.2.1",         # Saga benchmarks + examples (dev-only)
    # Linting & Type Checking
    "ty>=0.0.11",   # Astral type checker (Rust-based)
    "ruff>=0.15.1", # 0.15.1+ fixes except-parenthesis bug (PEP 758 + as clause)
    # Pre-commit (optional, for local dev)
    "pre-commit>=4.0.0",
    # Changelog
    "towncrier>=24.0",
]
docs = ["bengal>=0.2.6"]

# ── Towncrier (changelog management) ──────────────────────────────────

[tool.towncrier]
directory = "changelog.d"
filename = "CHANGELOG.md"
package = "kida"
package_dir = "src"
title_format = "## [{version}] - {project_date}"
issue_format = "`#{issue}`"
underlines = ["", "", ""]

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true
